Wed Jun 16 23:04:38 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Document.cc (UseProxy): Change http_proxy_exclude to an
	escaped regex string. Allows for much more complicated rules.

Wed Jun 16 16:04:07 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* Makefile.config.in: fix typo in name IMAGE_URL_PREFIX.

	* htdig/Retriever.cc(IsValidURL): change handling of valids to only
	reject if list is not empty, give different error message.

Wed Jun 16 14:40:56 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc(main): pass StringList args to setEscaped()
	instead of unprocessed input[] char *'s.

	* htsearch/Display.cc(buildMatchList): cast score to (int) in maxScore
	calculation, to avoid compiler warnings.

	* htdig/htdig.cc(main): change comparison on minimalFile to avoid
	compiler warnings.

Wed Jun 16 11:30:23 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/HtRegex.cc(setEscaped): Fix appending of substring to avoid
	compiler warnings.

	* htlib/HtDateTime.cc(SettoNow): Strip out all the nonsense that
	doesn't work, set Ht_t directly instead.

Wed Jun 16 09:58:12 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* configure.in, configure, Makefile.config.in: Correct handling of
	SEARCH_FORM variable, as Gabriele recommended.

Wed Jun 16 09:32:06 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/cgi.h, htlib/cgi.cc(cgi & init), htsearch/htsearch.cc
	(main & usage): allow a query string to be passed as an argument.

Wed Jun 16 08:43:09 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/Makefile.in, htdig/Makefile.in, htfuzzy/Makefile.in,
	htmerge/Makefile.in, htnotify/Makefile.in: Use standard $(bindir)
	variable instead of $(BIN_DIR). Allows for standard configure flags
	to set this. (Completes Geoff's change on May 15.)

Tue Jun 15 14:31:50 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc(parseNonTextLine): move line that clears _parsedString,